src/App.css
#root {
  margin: 0 auto;
  text-align: center;
  box-sizing: border-box;
}

.app-container {
  width: 100%;
  min-height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.app-wrapper {
  width: 80%;
  max-width: 1250px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

